Launcher animation speed setting

--- a/ZalithLauncher/src/main/res/values/colors.xml
+++ b/ZalithLauncher/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="color_on_tertiary_container">#0B3A42</color>
 
     <color name="color_background">#80F5F9FA</color>
-    <color name="color_on_background">#1E1E1E</color>
+    <color name="color_on_background">#399FB1</color>
 
     <color name="color_surface">#FFFFFF</color>
     <color name="color_on_surface">#202020</color>
