--- a/ZalithLauncher/src/main/res/values-night/themes.xml
+++ b/ZalithLauncher/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.ZalithLauncher" parent="Theme.Material3.Light.NoActionBar">
+    <style name="Theme.ZalithLauncher" parent="Theme.Material3.Dark.NoActionBar">
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
